stage 3 complete, common package revised, sending objects of Message class added, works